--- a/src/public/css/change_address.css
+++ b/src/public/css/change_address.css
@@ -2,6 +2,19 @@
     padding: 30px 15px;
 }
 
+.message {
+    margin: 10px 0;
+    text-align: center;
+    color: red;
+    font-size: 20px;
+}
+
+.message-session {
+    display: block;
+    margin: 0 ;
+    padding: 0;
+}
+
 .change-address-form__heading {
     margin-bottom: 20px;
     text-align: center;
@@ -26,16 +39,16 @@
     font-size: 16px;
     font-weight: bold;
     text-align: left;
-    margin-bottom: 10px;
 }
 
 .form__group-content input {
     padding: 10px;
     width: 100%;
     height: 40px;
-    border: 1px solid #ddd;
+    border: 1px solid #000;
     border-radius: 3px;
     appearance: none;
+    margin-bottom: 20px;
 }
 
 .form__error {
@@ -43,14 +56,14 @@
     text-align: center;
     padding: 10px;
     font-weight: 400;
-    margin-bottom: 20px;
 }
 
 .form__button {
     text-align: center;
+    margin-top: 20px;
 }
 
-.form__button-update {
+.form__button-submit {
     border: none;
     border-radius: 3px;
     background: #ff5555;
@@ -64,7 +77,7 @@
     font-weight: bold;
 }
 
-.form__button-update:hover {
+.form__button-submit:hover {
     background: #ee7f7f;
 }
 
