--- a/src/public/css/item.css
+++ b/src/public/css/item.css
@@ -41,5 +41,13 @@
 .item-name {
     text-align: left;
     font-size: 18px;
-    padding: 10px;
+    padding: 10px 0 0 10px;
+}
+
+.item-status {
+    font-weight: bold;
+    color: #ff0000;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
