--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -1,7 +1,20 @@
+.message {
+    margin: 40px 0 0 0;
+    text-align: center;
+    color: red;
+    font-size: 22px;
+}
+
+.message-session {
+    display: block;
+    margin: 0 ;
+    padding: 0;
+}
+
 .item-detail__container {
     display: flex;
     align-items: flex-start;
-    margin: 50px 20px;
+    margin: 10px 20px;
     gap: 0;
 }
 
@@ -107,7 +120,7 @@
 }
 
 .item-detail__info {
-   display: block;
+    display: block;
 }
 
 .item-detail__info dd {
