--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -21,16 +21,6 @@
   color: #000;
 }
 
-.user-image-preview {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  background-color: #ddd;
-  display: inline-block;
-  background-size: cover;
-  margin: 0 40px 0 10px;
-}
-
 .image-upload {
   display: flex;
   align-items: center;
@@ -48,6 +38,24 @@
 
 .image-upload__label:hover {
   color: #ee7f7f;;
+}
+
+.user-image-preview {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  background: #ddd;
+  display: inline-block;
+  overflow: hidden;
+  background-size: cover;
+  margin: 0 40px 0 10px;
+}
+
+.user-image-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 input[type="file"] {
@@ -98,7 +106,7 @@ input[type="file"] {
 }
 
 .form__button-submit:hover {
-  background: #ee7f7f;
+  color: #ee7f7f;
 }
 
 .login__link {
