--- a/src/public/css/item_detail.css
+++ b/src/public/css/item_detail.css
@@ -2,26 +2,26 @@
     margin: 40px 0 0 0;
     text-align: center;
     color: red;
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .message-session {
     display: block;
-    margin: 0 ;
+    margin: 0;
     padding: 0;
 }
 
 .item-detail__container {
     display: flex;
     align-items: flex-start;
-    margin: 10px 20px;
-    gap: 0;
+    margin: 10px;
 }
 
 .item-detail__left {
     text-align: center;
     margin-top: 100px;
     width: 50%;
+    margin-left: 60px;
 }
 
 .item-detail__image {
@@ -34,6 +34,7 @@
 
 .item-detail__right {
     width: 50%;
+    margin-left: 50px;
 }
 
 .item-detail__name {
@@ -43,7 +44,7 @@
 }
 
 .item-detail__brand {
-    font-size: 18px;
+    font-size: 14px;
     margin-bottom: 20px;
 }
 
@@ -62,6 +63,11 @@
     background: none;
     border: none;
     cursor: pointer;
+}
+
+.like-btn[disabled] {
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 .item-detail__actions img {
@@ -119,16 +125,16 @@
     display: block;
 }
 
-.item-detail__info dt, 
+.item-detail__info dt,
 .item-detail__info dd {
     display: inline-block;
     vertical-align: top;
     margin: 8px 0;
 }
 .item-detail__info dt {
-font-size: 17px;
-font-weight: bold;
-margin-right: 50px;
+    font-size: 17px;
+    font-weight: bold;
+    margin-right: 50px;
 }
 
 .item-detail__info dd {
@@ -136,13 +142,12 @@ margin-right: 50px;
     font-size: 14px;
 }
 
-.category-item {
+.category-label {
     display: inline-block;
-    border: 1px solid #ddd;
     border-radius: 20px;
     padding: 3px 10px;
-    color: #000;
-    background: #ddd;
+    background: #f0f0f0;
+    font-size: 13px;
 }
 
 /* 商品の状態 */
@@ -150,8 +155,6 @@ margin-right: 50px;
     font-size: 16px;
     font-weight: normal;
 }
-
-
 
 .comment-header {
     display: flex;
@@ -162,6 +165,16 @@ margin-right: 50px;
 
 .comment-user {
     font-weight: bold;
+}
+
+.user-image-preview {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #ddd;
+    display: inline-block;
+    overflow: hidden;
+    background-size: cover;
 }
 
 .comment-user-image {
@@ -237,3 +250,122 @@ margin-right: 50px;
 .item-detail__comment-submit:hover {
     background: #ee7f7f;
 }
+
+.rule {
+    font-size: 18px;
+    margin: 20px 0;
+    color: red;
+}
+
+.login-link {
+    margin: 0 0 30px 20px;
+}
+
+.login-link a {
+    font-size: 16px;
+    color: #747070;
+}
+
+.login-link a:hover {
+    color: #868585;
+}
+
+@media (max-width: 768px) {
+    .item-detail__container {
+        flex-direction: column;
+        margin: 20px 10px;
+    }
+
+    .item-detail__left,
+    .item-detail__right {
+        width: 100%;
+        text-align: center;
+        margin: 0;
+        padding: 0 20px;
+    }
+
+    .item-detail__actions {
+        display: flex;
+        justify-content: center;
+    }
+
+    .item-detail__comment {
+        display: inline-block;
+        width: 60%;
+    }
+
+    .item-detail__comment-form,
+    .item-detail__purchase-submit {
+        width: 60%;
+    }
+
+    .item-detail__comment-form {
+        margin: 0 auto;
+    }
+
+    .comment-content {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .rule {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 468px) {
+    .item-detail__container {
+        flex-direction: column;
+        margin: 20px 10px; /* 余白を調整 */
+    }
+
+    .item-detail__left,
+    .item-detail__right {
+        width: 100%;
+        text-align: center;
+        margin: 0;
+        padding: 0 20px;
+    }
+
+    .item-detail__actions {
+        display: flex;
+        justify-content: center;
+    }
+
+    .item-detail__comment-form,
+    .item-detail__purchase-submit {
+        width: 100%;
+    }
+
+    .rule {
+        font-size: 16px;
+    }
+}
+/* 
+        @media (max-width: 1024px) {
+            .item-detail__container {
+                margin: 0;
+                gap: 5px;
+            }
+        
+            .item-detail__left {
+                width: 50%;
+                text-align: center;
+                margin: 0;
+                padding: 0 20px;
+            }
+        
+            .item-detail__image {
+                max-width: 400px;
+                margin: 60px 0 0 30px;
+            }
+        
+            .item-detail__right {
+                margin-left: 50px;
+            }
+        
+            .item-detail__text {
+                margin-top: 30px;
+            }
+        }
+     */
