--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -68,51 +68,52 @@
     color: #dcdbdb;
 }
 
-@media (min-width: 481px) and (max-width: 860px) {
-    .nav-container {
-        flex-direction: row;
+/* @media only screen and (min-width: 1400px) and (max-width: 1540px) {
+    .nav {
+        /* スタイルのカスタマイズ例 */
+        /* display: flex;
         justify-content: space-between;
-        flex-wrap: nowrap;
-        width: 100%;
+        padding: 10px 20px;
+    }
+    .nav__content {
+        max-width: 1400px;
+        margin: auto;
+    }
+    .nav .search input[type="text"] {
+        width: 300px;
+    } */
+
+
+@media only screen and (min-width: 768px) and (max-width: 850px) {
+    .nav__content {
+        margin: 10px 0;
     }
 
-    .search input {
-        max-width: 100%;
-        padding: 10px;
-        font-size: 14px;
+    .search input[type="text"] {
+        width: 90%;
     }
 
     .nav li {
         flex: 1;
-        display: inline-block;
-        width: 80px;
     }
 
     .nav a,
     .sell button {
-        font-size: 14px;
+        font-size: 13px;
         display: inline-block;
-        width: 70px;
-    }
-
-    .nav a {
-        margin-top: 8px;
+        width: 80px;
     }
 
     .sell-link {
         text-align: center;
-        padding: 5px 10px;
-    }
-
-    .sell-link a {
-        padding: 0;
-        margin: 0;
+        padding: 3px 10px;
     }
 }
 
 @media (max-width: 480px) {
-    .nav-container {
+    .nav__content {
         flex-direction: column;
+        margin: 10px 20px 0 0;
     }
 
     .search input {
@@ -121,10 +122,13 @@
         font-size: 12px;
     }
 
+    .nav {
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
     .nav li {
         flex: 1;
-        display: inline-block;
-        width: 80px;
     }
 
     .nav a,
@@ -132,8 +136,7 @@
         font-size: 12px;
     }
 
-    .sell button {
+    .sell-link {
         padding: 5px 20px;
-        width: 70px;
     }
 }
