--- a/src/public/css/item.css
+++ b/src/public/css/item.css
@@ -1,6 +1,9 @@
 .tabs {
     border-bottom: 1px solid #858484;
     margin-top: 80px;
+    padding: 0;
+    display: flex;
+    list-style: none;
 }
 
 .empty {
@@ -16,6 +19,8 @@
     font-size: 20px;
     text-decoration: none;
     color: #000;
+    display: inline-block;
+
 }
 
 .tabs a.active {
@@ -33,6 +38,13 @@
     text-align: center;
 }
 
+.item-image {
+    position: relative;
+    display: inline-block;
+    width: 300px; /* 必要に応じて設定 */
+    height: 300px;
+}
+
 .item-image img {
     width: 300px;
     height: 300px;
@@ -45,51 +57,22 @@
     padding: 10px 0 20px 20px;
 }
 
-.item-status {
-    font-weight: bold;
-    color: #ff0000;
+.sold-label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-25deg);
+    background: rgba(234, 130, 130, 0.9);
+    color: white;
     font-size: 20px;
-    margin: 0;
-    padding-bottom: 10px;
-    display: block;
-}
-
-.pagination {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
-}
-
-.pagination a,
-.pagination span {
-    border: 0.5px solid #bfbcbc;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 15px;
-    text-decoration: none;
-    background: #ffffff;
-    font-size: 16px;
-    border-radius: 3px;
-    cursor: pointer;
-    box-sizing: border-box;
-}
-
-.pagination .active span {
     font-weight: bold;
-    color: #fff;
-    background: #3131ec;
+    padding: 10px 60px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    z-index: 10;
+    white-space: nowrap;
 }
 
-.pagination li {
-    list-style-type: none;
-}
-
-.pagination a:hover {
-    background: #9595f7;
-    color: #ffffff;
-}
 
 
 @media screen and (min-width: 800px) and (max-width: 1280px) {
@@ -123,13 +106,11 @@
 
     .tabs a {
         margin: 0;
-        padding: 0 40px;
+        padding: 0 20px;
     }
 
     .item-list {
         grid-template-columns: repeat(2, 1fr);
-        gap: 30px;
-        margin: 50px 10px;
     }
 
     .item-image {
@@ -137,7 +118,7 @@
     }
 
     .item-name {
-        margin: 0 0 0 30px;
+        margin: 0 0 0 45px;
     }
 }
 
@@ -148,7 +129,7 @@
 
     .tabs a {
         margin: 0;
-        padding: 0 40px;
+        padding: 0 30px;
     }
 
     .item-list {
@@ -181,10 +162,6 @@
         margin: 50px 10px;
     }
 
-    .item-image {
-        margin: 10px 0;
-    }
-
     .item-name {
         margin: 0 0 0 30px;
     }
@@ -193,7 +170,6 @@
 @media screen and (max-width: 480px) {
     .item-list {
         grid-template-columns: repeat(1, 1fr);
-        gap: 30px;
         margin: 40px 20px;
     }
 
@@ -201,7 +177,21 @@
         margin: 0 0 0 20px;
     }
 
+    .tabs li {
+        text-align: center;
+    }
+
+    .tabs {
+        display: flex;
+            justify-content: center;
+    }
+
     .tabs a {
-        margin-left: 10px;
+        margin: 0 20px;
+        padding: 0;
+    }
+
+    .sold-label {
+        top: 50%;
     }
 }
