--- a/src/public/css/item_payment.css
+++ b/src/public/css/item_payment.css
@@ -3,12 +3,12 @@
   text-align: center;
 }
 
-.payment-message {
-  margin-top: 10px;
-  text-align: center;
-  color: red;
-  font-size: 18px;
-  font-weight: bold;
+.payment-error {
+    color: #ff0000;
+    padding: 0;
+    font-weight: 400;
+    display: block;
+    text-align: center;
 }
 
 .payment-form-content {
@@ -54,7 +54,7 @@
   margin: 80px 0 30px;
 }
 
-.payment-button__submit {
+.payment__button-submit {
   width: 100%;
   max-width: 500px;
   padding: 10px 0;
@@ -66,7 +66,7 @@
   cursor: pointer;
 }
 
-.payment-button__submit:hover {
+.payment__button-submit:hover {
   background-color: #ee7f7f;
 }
 
@@ -79,7 +79,7 @@
     width: 90%;
   }
 
-  .payment-button__submit {
+  .payment__button-submit {
     width: 90%;
   }
 
