--- a/src/public/css/item_purchase.css
+++ b/src/public/css/item_purchase.css
@@ -59,6 +59,7 @@
     margin: 0;
     padding: 0;
     letter-spacing: 1px;
+    font-weight: 400;
 }
 
 .payment-method__container {
@@ -84,7 +85,8 @@
     color: #ff0000;
     padding: 0;
     font-weight: 400;
-    margin: 0 0 10px 47px;
+    margin: 0 0 20px 47px;
+    display: block;
 }
 
 .shipping-address {
