--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,4 +1,4 @@
-.login__content {
+.login-content {
     padding: 30px 15px;
 }
 
@@ -16,7 +16,7 @@
     text-align: center;
 }
 
-.form__group {
+.form-group {
     text-align: center;
 }
 
@@ -39,10 +39,28 @@
     margin-bottom: 20px;
 }
 
+.password-container {
+    position: relative;
+}
+
+.toggle-password {
+    position: absolute;
+    left: 90%;
+    transform: translateX(-50%);
+    top: 45%;
+    cursor: pointer;
+    font-size: 18px;
+    background: #fff;
+    border: none;
+}
+
+.message {
+    margin-bottom: 10px;
+}
+
 .form__error {
     color: #ff0000;
     text-align: center;
-    padding: 10px;
     font-weight: 400;
 }
 
