--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -1,4 +1,4 @@
-.mypage__content {
+.mypage-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,7 +39,6 @@
     color: #000;
 }
 
-/* Image Upload Styles */
 .image-upload {
     display: flex;
     align-items: center;
@@ -59,7 +58,7 @@
     color: #ee7f7f;
 }
 
-.user-image-preview {
+.profile-image {
     width: 90px;
     height: 90px;
     border-radius: 50%;
