--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -36,6 +36,46 @@
     }
 }
 
+@media screen and (min-width: 768px) and (max-width: 850px) {
+    .header__inner {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 15px;
+    }
+
+    .header-utilities {
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+    }
+
+    .header__logo img {
+        width: 220px;
+        margin: 5px 10px;
+    }
+
+    .nav__content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+        gap: 10px;
+    }
+
+    .nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 5px 0;
+    }
+
+    .nav li {
+        margin: 5px;
+        padding: 5px;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .header__inner {
         flex-direction: column;
