--- a/src/public/css/item.css
+++ b/src/public/css/item.css
@@ -1,3 +1,17 @@
+.message {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.message-session {
+    display: block;
+    margin: 0;
+    padding: 0;
+    color: red;
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .tabs {
     border-bottom: 1px solid #858484;
     margin-top: 80px;
