--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -32,7 +32,16 @@
 .mypage-content h1 {
     display: inline-block;
     font-size: 40px;
-    margin-left: 50px;
+    margin: 0;
+}
+
+.review-stars {
+    font-size: 30px;
+    color: #ccc;
+}
+
+.review-stars .selected {
+    color: #FFD700;
 }
 
 .profile-link {
@@ -86,6 +95,32 @@
     font-size: 20px;
     text-decoration: none;
     color: #000;
+}
+
+.notification-count {
+    display: inline-block;
+    background-color: red;
+    color: #fff;
+    font-size: 16px;
+    padding: 1px 10px;
+    border-radius: 40%;
+    margin: 0 0 10px 3px;
+}
+
+.item-image {
+    position: relative;
+}
+
+.notification-count__small {
+    position: absolute;
+    top: 5px; 
+    left: 28px; 
+    background-color: red;
+    color: #fff;
+    font-size: 15px;
+    padding: 2px 6px;
+    border-radius: 50%;
+    z-index: 10; 
 }
 
 .tabs a.active {
@@ -207,7 +242,13 @@
 
 @media screen and (max-width: 480px) {
     .tabs a {
-        margin: 0 15px;
+        margin: 5px;
+        font-size: 14px;
+    }
+
+    .notification-count {
+        font-size: 12px;
+        padding: 1px 3px;
     }
 
     .item-list {
